# openapi.json
@@ -1509,6 +1509,25 @@
           "accepted"
         ]
       },
+      "Currency": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string"
+          },
+          "minor_unit": {
+            "type": "integer"
+          },
+          "symbol": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "code",
+          "minor_unit",
+          "symbol"
+        ]
+      },
       "UsageParseRequest": {
         "type": "object",
         "properties": {
@@ -3819,6 +3838,40 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GetConsentsResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "403 problem+json",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/currencies": {
+      "get": {
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Currency"
+                  }
                 }
               }
             }
